--- a/water_bottle.html
+++ b/water_bottle.html
@@ -8,16 +8,17 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
   <script src=" https://unpkg.com/ml5@latest/dist/ml5.min.js "></script>
+  <link rel="stylesheet" type="text/css" href="water_bottle.css">
     </head>
 
     <body background = "city-street-crossing-through-eyes-260nw-1377458216.jpg">
         <center>
         <h1 class="btn btn-primary heading">WATER BOTTLE</h1>
-        <br><br>
-        </center>
+        <br>
         <button class="bn btn-primary">BACK</button>
-        <br><br>
-        <center>
+        <br>
         <h3 id="status" class="btn btn-success"></h3>
+        </center>
     </body>
+    <script src = "water_bottle.js"></script>
 </html>
