--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <body>
         <h1 class="btn btn-info heading">Object Detection</h1>
         <br><br>
-        <a class="btn btn-primary anchor" href="">Water Bottle</a>
+        <a class="btn btn-primary anchor" href="water_bottle.html">Water Bottle</a>
         <br><br>
-        <a class="btn btn-primary anchor" href="">Laptop</a>
+        <a class="btn btn-primary anchor" href="laptop.html">Laptop</a>
         <br><br>
-        <a class="btn btn-primary anchor" href="">Toys</a>
+        <a class="btn btn-primary anchor" href="toys.html">Toys</a>
         <br><br>
-        <a class="btn btn-primary anchor" href="">Book</a>
+        <a class="btn btn-primary anchor" href="book.html">Book</a>
         <br><br>
-        <a class="btn btn-primary anchor" href="">Television</a>
+        <a class="btn btn-primary anchor" href="tv.html">Television</a>
     </body>
     </center>
 </html>
