--- a/toys.html
+++ b/toys.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>water bottle</title>
+        <title>Toys</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -8,17 +8,17 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
   <script src=" https://unpkg.com/ml5@latest/dist/ml5.min.js "></script>
-  <link rel="stylesheet" type="text/css" href="water_bottle.css">
+  <link rel="stylesheet" type="text/css" href="toys.css">
     </head>
 
     <body>
         <center>
-        <h1 class="btn btn-primary heading">WATER BOTTLE</h1>
+        <h1 class="btn btn-primary heading">TOY</h1>
         <br>
         <a class="btn btn-primary" href="index.html">BACK</button>
         <br>
         <h3 id="status" class="btn btn-success"></h3>
         </center>
     </body>
-    <script src = "water_bottle.js"></script>
+    <script src = "toys.js"></script>
 </html>
