--- a/index.html
+++ b/index.html
@@ -20,17 +20,10 @@
     </head>
     <center>
     <body>
-        <h1 class="btn btn-info heading">Object Detection</h1>
-        <br><br>
-        <a class="btn btn-primary anchor" href="water_bottle.html">Water Bottle</a>
-        <br><br>
-        <a class="btn btn-primary anchor" href="laptop.html">Laptop</a>
-        <br><br>
-        <a class="btn btn-primary anchor" href="toys.html">Toys</a>
-        <br><br>
-        <a class="btn btn-primary anchor" href="book.html">Book</a>
-        <br><br>
-        <a class="btn btn-primary anchor" href="tv.html">Television</a>
+        <h1 class="btn btn-info heading">BABY MONITORING WEBAPP</h1>
+        <h3 id="status" class="btn btn-danger"></h3>
+        <h3 class="btn btn-warning"></h3>
     </body>
+    <script src="main.js"></script>
     </center>
 </html>
